test/flowanalysis/jplevyak/badreturn.good
 called from 0 in operator at prelude.v:0
 called from 4 in __init at assign2.v:1
__init::self(assign2.v:1) ( C (assign2.v:1) )
badreturn.v:2: 'q' has no type
badreturn.v:2: near 'q' unmatched type: ( tuple ) 
badreturn.v:3: expression has no type
badreturn.v:3: expression has no type
error: expression has no type
f::c2(assign2.v:3) ( C (assign2.v:1) )
fail: program does not type
function __init assign2.v:1
function __init assign2.v:1
function f assign2.v:3
globals
user::c1(assign2.v:2) ( C (assign2.v:1) )
