test/flowanalysis/jplevyak/badreturn.v
f() : (1,2.0);
(a, b, q) : f();
print(a + b + q);

g() : (1,2.0,4.0);
(s, t) : g();
print(s + t);
